# ChangeLog for app-text/xpdf
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/Attic/ChangeLog,v 1.55 2004/11/05 16:57:57 usata Exp $

  06 Nov 2004; Mamoru KOMACHI <usata@gentoo.org> files/xpdfrc.1,
  xpdf-3.00-r4.ebuild, xpdf-3.00-r5.ebuild:
  Added version strings to cjk fonts.

  03 Nov 2004; Bryan Østergaard <kloeri@gentoo.org> xpdf-3.00-r5.ebuild:
  Stable on alpha, bug 69662.

  03 Nov 2004; <SeJo@gentoo.org> xpdf-3.00-r5.ebuild:
  stable on ppc gsla: 69662

  03 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org> xpdf-3.00-r5.ebuild:
  Stable on sparc wrt #69662

  04 Nov 2004; Simon Stelling <blubb@gentoo.org> xpdf-3.00-r5.ebuild:
  stable on amd64 due to security reasons (bug #69662)

*xpdf-3.00-r5 (01 Nov 2004)

  01 Nov 2004; <heino@gentoo.org> +files/xpdf-goo-sizet.patch,
  +xpdf-3.00-r5.ebuild:
  add security fix on 64bit platforms, bug #69662

  27 Oct 2004; Aron Griffis <agriffis@gentoo.org> xpdf-3.00-r4.ebuild:
  stable on ia64 #68661

  25 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> xpdf-2.03.ebuild,
  xpdf-3.00-r1.ebuild, xpdf-3.00-r2.ebuild, xpdf-3.00-r3.ebuild,
  xpdf-3.00-r4.ebuild:
  Provide virtual/pdfviewer; bug #50423.

*xpdf-3.00-r4 (25 Oct 2004)

  25 Oct 2004; Heinrich Wendel <lanius@gentoo.org>
  +files/xpdf-3.00-truetype-new.diff.gz, xpdf-3.00-r4.ebuild:
  bug #67799 again

  24 Oct 2004; Heinrich Wendel <lanius@gentoo.org>
  +files/xpdf-3.00-PathScanner.patch.bz2, +files/xpdf-3.00-core.patch.bz2,
  +files/xpdf-3.00-overflow.patch.bz2:
  add patches from redhat to prevent crashes, bug #67799

*xpdf-3.00-r3 (21 Oct 2004)

  21 Oct 2004; Heinrich Wendel <lanius@gentoo.org> -xpdf-2.02.1.ebuild,
  -xpdf-3.00-r2.ebuild, +xpdf-3.00-r3.ebuild, -xpdf-3.00.ebuild:
  fix integer overflows, bug #68058

  19 Oct 2004; Guy Martin <gmsoft@gentoo.org> xpdf-3.00-r2.ebuild:
  Stable on hppa.

  18 Oct 2004; Gustavo Zacarias <gustavoz@gentoo.org> xpdf-3.00-r2.ebuild:
  Stable on sparc
